# simple_speech

./: CMakeLists.txt  README.md  package.xml
src/: simple_speech.cpp  simple_speech_client.cpp
srv/: script.srv
